Agregar archivo configurado LFS html y css

--- a/bici.css
+++ b/bici.css
@@ -1,27 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
-
-.iframe-container {
-    display: flex;
-    flex-direction: column; /* Alinea los elementos verticalmente */
-    justify-content: center; /* Centra verticalmente */
-    align-items: center; /* Centra horizontalmente */
-    height: 100vh;
-    background-color: #fff;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-}
-
-h1 {
-    margin-bottom: 20px; /* Agrega espacio debajo del título */
-}
-
-embed {
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:17e88672387f5c7f57e668e49c4a3893aa5de92d9c0eeaf874b13baf176358ca
+size 627
